fix reading file