@@ -172,7 +172,8 @@ public abstract class BinaryInstaller extends ToolInstaller {
         }
         // Getting cli binary's sha256 form Artifactory.
         String artifactorySha256 = getArtifactSha256(client, cliUrlSuffix);
-        return StringUtils.equals(Files.readString(path), artifactorySha256);
+        String fileContent = FileUtils.readFileToString(path.toFile(), StandardCharsets.UTF_8);
+        return StringUtils.equals(fileContent, artifactorySha256);
     }
 
     /**
